--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "antd": "^5.27.6",
     "next": "^16.0.0",
     "next-auth": "^4.24.11",
     "react": "19.2.0",
